fix: horizontal scroll

--- a/Utility.css
+++ b/Utility.css
@@ -1,3 +1,3 @@
 :root{
-    --footer-bg-color: ##f7f7f7; 
+    --footer-bg-color: #f7f7f7; 
 }
